# LearnOpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  Functions.cmake  README.md  build.sh  imgui.ini  vcpkg.json
buildScripts/: build0.sh  build1.sh
buildScripts_macos/: build0.sh  build1.sh  build2.sh  build3.sh  build4.sh
buildScripts_macos/01.gettingStarted/: build0.sh  build1.sh  build2.sh  build3.sh  build4.sh
buildScripts_macos/02.colors/: build0.sh  build1.sh  build2.sh  build3.sh  build4.sh  build5.sh
buildScripts_macos/03.assimp/: build0.sh
buildScripts_macos/gettingStarted/: build0.sh  build1.sh  build2.sh  build3.sh  build4.sh
buildScripts_win64/gettingStarted/: build0.bat
buildingScripts_win64/gettingStarted/: build0.bat
examples/: CMakeLists.txt
examples/01.gettingStarted/: CMakeLists.txt
examples/01.gettingStarted/intro0/: CMakeFiles.txt  CMakeLists.txt  main.cpp
examples/01.gettingStarted/intro0/resource/: shaderVert.vs
examples/01.gettingStarted/intro1/: CMakeLists.txt  main.cpp
examples/01.gettingStarted/intro2/: CMakeLists.txt  main.cpp
examples/01.gettingStarted/intro3/: CMakeLists.txt  main.cpp
examples/01.gettingStarted/intro4/: CMakeLists.txt  main.cpp
examples/02.colors/: CMakeLists.txt
examples/02.colors/colors0/: CMakeLists.txt  main.cpp
examples/02.colors/colors1/: CMakeLists.txt  main.cpp
examples/02.colors/colors1/shaders/: basic.fs
examples/02.colors/colors2/: CMakeLists.txt  main.cpp
examples/02.colors/colors2/shaders/: basic.fs
examples/02.colors/colors3/: CMakeLists.txt  main.cpp
examples/02.colors/colors4/: CMakeLists.txt  main.cpp
examples/02.colors/colors5/: CMakeLists.txt  main.cpp
examples/02.colors/colors5/resource/: basic.fs
examples/03.assimp/: CMakeLists.txt
examples/03.assimp/assimp0/: CMakeFiles.txt  CMakeLists.txt  main.cpp
examples/03.assimp/assimp0/shaders/: basic.fs
resources/assimp0/: basic.fs
src/: CMakeFiles.txt  CMakeLists.txt  Main.cpp  Mesh.h  Model.h  Shader.h  camera.cpp  camera.h  glad.c
src/01.gettingStarted/intro0/: main.cpp
src/01.gettingStarted/intro0/shaders/: shaderFrag.glsl  shaderVert.glsl  shaderVert.vs
src/01.gettingStarted/intro1/: main.cpp
src/01.gettingStarted/intro2/: main.cpp
src/01.gettingStarted/intro3/: main.cpp
src/01.gettingStarted/intro4/: main.cpp
src/02.colors/colors0/: main.cpp
src/02.colors/colors1/: main.cpp
src/02.colors/colors1/shaders/: basic.fs  basic.vs
src/02.colors/colors2/: main.cpp
src/02.colors/colors2/shaders/: basic.fs  basic.vs
src/02.colors/colors3/: main.cpp
src/02.colors/colors3/shaders/: basic.fs
src/02.colors/colors4/: main.cpp
src/02.colors/colors4/shaders/: basic.fs  basic.vs
src/02.colors/colors5/: main.cpp
src/02.colors/shaders/: basic.fs
src/03.assimp/assimp0/: main.cpp
src/Intro0/: Main.cpp
src/Intro1/: Main.cpp
src/gettingStarted/intro0/: main.cpp
src/gettingStarted/intro1/: main.cpp
src/gettingStarted/intro1/shaders/: textured.vs
src/gettingStarted/intro2/: main.cpp
src/gettingStarted/intro3/: main.cpp
src/gettingStarted/intro3/shaders/: textured.vs
src/gettingStarted/intro4/: main.cpp
src/include/glad/: glad.h
src/include/imgui/: imgui_impl_glfw.cpp
src/intro2/: main.cpp
src/intro3/: main.cpp
src/intro4/: main.cpp
src/shaders/: shader.fs  shader.vs  shaderFrag.fs  shaderVert.vs  textured.fs  textured.vs
src/shaders/intro1/: textured.fs
src/shaders/intro2/: textured.fs  textured.vs
src/shaders/intro3/: textured.fs  textured.vs
